<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <name>JMS Plugins</name>
  <groupId>io.cdap.plugin</groupId>
  <artifactId>jms-plugins</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <cdap.version>6.4.0-SNAPSHOT</cdap.version>
    <cdap.plugin.version>2.6.0-SNAPSHOT</cdap.plugin.version>
    <spark1.version>1.6.1</spark1.version>
    <spark2.version>2.2.0</spark2.version>
    <widgets.dir>widgets</widgets.dir>
    <docs.dir>docs</docs.dir>
    <hadoop.version>2.3.0</hadoop.version>
    <netty.version>4.1.16.Final</netty.version>
    <netty-http.version>1.3.0</netty-http.version>
    <avro.version>1.8.2</avro.version>
    <main.basedir>${project.basedir}</main.basedir>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.7</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.7</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>2.7</version>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>org.apache.geronimo.specs</groupId>-->
<!--      <artifactId>geronimo-jms_1.1_spec</artifactId>-->
<!--      <version>1.1</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.apache.qpid</groupId>-->
<!--      <artifactId>qpid-jms-client</artifactId>-->
<!--      <version>0.40.0</version>-->
<!--    </dependency>-->
    <dependency>
      <groupId>org.apache.activemq</groupId>
      <artifactId>activemq-all</artifactId>
      <version>5.11.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.avro</groupId>
      <artifactId>avro</artifactId>
      <version>${avro.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-mllib_2.10</artifactId>
      <version>${spark1.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-streaming_2.10</artifactId>
      <version>${spark1.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-core_2.10</artifactId>
      <version>${spark1.version}</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-log4j12</artifactId>
        </exclusion>
        <exclusion>
          <groupId>log4j</groupId>
          <artifactId>log4j</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.hadoop</groupId>
          <artifactId>hadoop-client</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.esotericsoftware.reflectasm</groupId>
          <artifactId>reflectasm</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.curator</groupId>
          <artifactId>curator-recipes</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.tachyonproject</groupId>
          <artifactId>tachyon-client</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.scala-lang</groupId>
          <artifactId>scala-compiler</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.eclipse.jetty.orbit</groupId>
          <artifactId>javax.servlet</artifactId>
        </exclusion>
        <!--
          Need to exclude this since Spark brings in an older version that makes
          S3 not work in standalone. This doesn't affect distributed mode.
        -->
        <exclusion>
          <groupId>net.java.dev.jets3t</groupId>
          <artifactId>jets3t</artifactId>
        </exclusion>
        <exclusion>
          <groupId>asm</groupId>
          <artifactId>asm</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>io.cdap.plugin</groupId>
      <artifactId>hydrator-common</artifactId>
      <version>${cdap.plugin.version}</version>
    </dependency>
    <dependency>
      <groupId>io.cdap.cdap</groupId>
      <artifactId>cdap-spark-core</artifactId>
      <version>${cdap.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.cdap.cdap</groupId>
      <artifactId>cdap-data-pipeline</artifactId>
      <version>${cdap.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.cdap.cdap</groupId>
      <artifactId>cdap-data-streams</artifactId>
      <version>${cdap.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-all</artifactId>
      <version>${netty.version}</version>
    </dependency>
    <dependency>
      <groupId>io.cdap.http</groupId>
      <artifactId>netty-http</artifactId>
      <version>${netty-http.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>13.0.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.cdap.cdap</groupId>
      <artifactId>cdap-api</artifactId>
      <version>6.4.0-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.cdap.cdap</groupId>
      <artifactId>cdap-common</artifactId>
      <version>${cdap.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>io.cdap.cdap</groupId>
      <artifactId>cdap-api-common</artifactId>
      <version>6.4.0-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.cdap.cdap</groupId>
      <artifactId>cdap-etl-api-spark</artifactId>
      <version>6.4.0-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.cdap.cdap</groupId>
      <artifactId>cdap-etl-api</artifactId>
      <version>${cdap.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <!--  <build>-->
  <!--    <plugins>-->
  <!--      <plugin>-->
  <!--        <groupId>org.apache.felix</groupId>-->
  <!--        <artifactId>maven-bundle-plugin</artifactId>-->
  <!--        <version>3.3.0</version>-->
  <!--        <source>1.8</source>-->
  <!--        <target>1.8</target>-->
  <!--        <configuration>-->
  <!--          <instructions>-->
  <!--            <_exportcontents>io.cdap.plugin.*;-->
  <!--            </_exportcontents>-->
  <!--            <Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>-->
  <!--            <Embed-Transitive>true</Embed-Transitive>-->
  <!--            <Embed-Directory>lib</Embed-Directory>-->
  <!--          </instructions>-->
  <!--        </configuration>-->
  <!--        <executions>-->
  <!--          <execution>-->
  <!--            <phase>package</phase>-->
  <!--            <goals>-->
  <!--              <goal>bundle</goal>-->
  <!--            </goals>-->
  <!--          </execution>-->
  <!--        </executions>-->
  <!--      </plugin>-->
  <!--      <plugin>-->
  <!--        <groupId>io.cdap</groupId>-->
  <!--        <artifactId>cdap-maven-plugin</artifactId>-->
  <!--        <version>1.1.0</version>-->
  <!--        <configuration>-->
  <!--          <cdapArtifacts>-->
  <!--            <parent>system:cdap-data-pipeline[6.1.0-SNAPSHOT,7.0.0-SNAPSHOT)</parent>-->
  <!--            <parent>system:cdap-data-streams[6.1.0-SNAPSHOT,7.0.0-SNAPSHOT)</parent>-->
  <!--          </cdapArtifacts>-->
  <!--        </configuration>-->
  <!--        <executions>-->
  <!--          <execution>-->
  <!--            <id>creclearate-artifact-config</id>-->
  <!--            <phase>prepare-package</phase>-->
  <!--            <goals>-->
  <!--              <goal>create-plugin-json</goal>-->
  <!--            </goals>-->
  <!--          </execution>-->
  <!--        </executions>-->
  <!--      </plugin>-->
  <!--    </plugins>-->
  <!--  </build>-->

  <build>
    <plugins>
      <!--      <plugin>-->
      <!--        <groupId>org.apache.maven.plugins</groupId>-->
      <!--        <artifactId>maven-checkstyle-plugin</artifactId>-->
      <!--        <version>2.17</version>-->
      <!--        <executions>-->
      <!--          <execution>-->
      <!--            <id>validate</id>-->
      <!--            <phase>validate</phase>-->
      <!--            <configuration>-->
      <!--              <configLocation>checkstyle.xml</configLocation>-->
      <!--              <suppressionsLocation>suppressions.xml</suppressionsLocation>-->
      <!--              <encoding>UTF-8</encoding>-->
      <!--              <consoleOutput>true</consoleOutput>-->
      <!--              <failsOnError>true</failsOnError>-->
      <!--              <includeTestSourceDirectory>true</includeTestSourceDirectory>-->
      <!--            </configuration>-->
      <!--            <goals>-->
      <!--              <goal>check</goal>-->
      <!--            </goals>-->
      <!--          </execution>-->
      <!--        </executions>-->
      <!--        <dependencies>-->
      <!--          <dependency>-->
      <!--            <groupId>com.puppycrawl.tools</groupId>-->
      <!--            <artifactId>checkstyle</artifactId>-->
      <!--            <version>6.19</version>-->
      <!--          </dependency>-->
      <!--        </dependencies>-->
      <!--      </plugin>-->

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.14.1</version>
        <configuration>
          <argLine>-Xmx2048m -Djava.awt.headless=true -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC
            -XX:OnOutOfMemoryError="kill -9 %p" -XX:+HeapDumpOnOutOfMemoryError
          </argLine>
          <reuseForks>false</reuseForks>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <instructions>
            <_exportcontents>
              io.cdap.plugin.*;
              com.google.common.base.*;
              org.apache.activemq.*;
              io.cdap.plugin.spark.*;
              org.apache.spark.streaming.*;
            </_exportcontents>
            <Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>
            <Embed-Transitive>true</Embed-Transitive>
            <Embed-Directory>lib</Embed-Directory>
          </instructions>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>bundle</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>io.cdap</groupId>
        <artifactId>cdap-maven-plugin</artifactId>
        <version>1.1.0</version>
        <configuration>
          <cdapArtifacts>
            <parent>system:cdap-data-pipeline[6.1.0-SNAPSHOT,7.0.0-SNAPSHOT)</parent>
            <parent>system:cdap-data-streams[6.1.0-SNAPSHOT,7.0.0-SNAPSHOT)</parent>
          </cdapArtifacts>
        </configuration>
        <executions>
          <execution>
            <id>create-artifact-config</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>create-plugin-json</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
